objects/Apttus__Obligation__c.object
<CustomObject>
    <description>Represents an obligation associated with an agreement</description>
    <fields>
        <fullName>Apttus__AllocationAmount__c</fullName>
        <description>The allocation amount</description>
        <inlineHelpText>1.       Lone Allocation Amount for single Agreement Line Item
2.       Aggregate Allocation Amount for multiple Agreement Line Items
3.       Partial Allocation Amount for when a Split Policy is applied to a single Agreement Line Item</inlineHelpText>
        <label>Allocation Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The obligation description</description>
        <inlineHelpText>The obligation description. Usually generated by the back-end.</inlineHelpText>
        <label>Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__EndDate__c</fullName>
        <description>The obligation end date.</description>
        <inlineHelpText>The obligation end date. Maximum of all related Agreement Line Item contract end date</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__ObligationName__c</fullName>
        <description>A user friendly name for the obligation</description>
        <inlineHelpText>A user friendly name for the obligation</inlineHelpText>
        <label>Obligation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__RevRec_Rule__c</fullName>
        <description>The revenue recognition rule associated with the obligation</description>
        <inlineHelpText>The revenue recognition rule associated with the obligation</inlineHelpText>
        <label>Revenue Recognition Rule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Ratable</fullName>
                    <default>true</default>
                    <label>Ratable</label>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__StartDate__c</fullName>
        <description>The obligation start date.</description>
        <inlineHelpText>The obligation start date. Minimum of all related Agreement Line Item contract original start date</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Status__c</fullName>
        <description>The obligation status</description>
        <inlineHelpText>The obligation status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__TransactionPrice__c</fullName>
        <description>The transaction price.</description>
        <inlineHelpText>1.       Lone Transaction Price for single Agreement Line Item
2.       Aggregate Transaction Price for multiple Agreement Line Items
3.       Partial Transaction Price for when a Split Policy is applied to a single Agreement Line Item</inlineHelpText>
        <label>Transaction Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus__Type__c</fullName>
        <description>The obligation type</description>
        <inlineHelpText>The obligation type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Performance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Obligation</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OBL-{0000000}</displayFormat>
        <label>Obligation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Obligations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>